# ssec-seo

./: .gitignore  API_BADGE.md  DISCLAIMER.md  INSTALL.md  README.md  SECURITY.md  __init__.py  api-docs.html  privacy-policy.md  pyproject.toml  requirements.txt  store-description.txt  vercel.json
.github/: CODEOWNERS
api/: index.py  logger.py  scan.py
api/admin/: logs.py
core/: __init__.py  config.py  ultimate_engine.py
core/crawler/: advanced_spider.py  spider.py
core/reporters/: html_generator.py  ultimate_reporter.py
core/scanners/: __init__.py  dead_links.py  exposed_data.py  http_headers.py  http_misconfig.py  redirects.py  security.py  ssl_scanner.py  ssl_tls.py  subdomain_scan.py  subdomain_scanner.py  tech_detection.py
extension/: manifest-firefox.json  manifest.json  popup.html  popup.js
pipelines/: cli.py
public/: index.html  manifest.json  sw.js
